--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "lint-staged": "lint-staged"
   },
   "dependencies": {
+    "axios": "^1.7.2",
+    "element-plus": "^2.7.7",
     "pinia": "^2.1.7",
+    "pinia-plugin-persistedstate": "^3.2.1",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3"
   },
@@ -23,9 +26,14 @@
     "eslint": "^8.57.0",
     "eslint-plugin-vue": "^9.23.0",
     "prettier": "^3.2.5",
+    "sass": "^1.77.8",
+    "unplugin-auto-import": "^0.18.0",
+    "unplugin-vue-components": "^0.27.3",
     "vite": "^5.3.1"
   },
   "lint-staged": {
-    "*.{js,ts,vue}": ["eslint --fix"]
+    "*.{js,ts,vue}": [
+      "eslint --fix"
+    ]
   }
 }
